--- a/Homework_1_Билюк_Костянтин_Андрійович/Homework_1/Homework_1/Homework_1.csproj
+++ b/Homework_1_Билюк_Костянтин_Андрійович/Homework_1/Homework_1/Homework_1.csproj
@@ -43,13 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes.cs" />
+    <Compile Include="Buy.cs" />
+    <Compile Include="Check.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
